--- a/interactive_brokers_downloader/appsettings.json
+++ b/interactive_brokers_downloader/appsettings.json
@@ -1,42 +1,3 @@
 {
-  "history_length_days": 365,
-  "tickers": [
-    "TGP",
-    "TK",
-    "OSG",
-    "DSSI",
-    "GASS",
-    "TNK",
-    "INSW",
-    "SFL",
-    "STNG",
-    "GLNG",
-    "ASC",
-    "GNK",
-    "LPG",
-    "ET",
-    "CPLP",
-    "PAA",
-    "EPD",
-    "NMCI",
-    "FLNG",
-    "SHLX",
-    "ETRN",
-    "AROC",
-    "DHT",
-    "NAT",
-    "TNP",
-    "NNA",
-    "CMRE",
-    "DAC",
-    "EGLE",
-    "DSX",
-    "GOGL",
-    "NMM",
-    "SALT",
-    "SBLK",
-    "NVGS",
-    "GLOG",
-    "KNOP"
-  ]
+  "history_length_days": 365
 }
