--- a/.env-default
+++ b/.env-default
@@ -5,5 +5,9 @@ TIMEZONE_USER=Europe/Prague
 # Turkey
 # Asia/Singapore
 
-INTERACTIVE_BROKERS_USERNAME=taran246
-INTERACTIVE_BROKERS_PASSWORD=fUaE2onmrVqVaEI8XBoR
+# temporarily disabled
+# INTERACTIVE_BROKERS_USERNAME=taran246
+# INTERACTIVE_BROKERS_PASSWORD=fUaE2onmrVqVaEI8XBoR
+
+INTERACTIVE_BROKERS_USERNAME=taran357
+INTERACTIVE_BROKERS_PASSWORD=ZfBAPEZ2XSuk0pROEIJv
